fix: font size & letter spacing

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -27,7 +27,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
-    line-height: 1;
+    line-height: 1.2;
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 14px;
@@ -40,7 +40,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
-    line-height: 1;
+    line-height: 1.2;
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 14px;
@@ -80,7 +80,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      line-height: 1;
+      line-height: 1.2;
       box-sizing: content-box;
       margin-top: 1rem;
       @include media-breakpoint-down(md) {
